--- a/client/styles.css
+++ b/client/styles.css
@@ -1,5 +1,20 @@
 /* your beautiful css styling goes here! */
+body {
 
+}
+.enemy {
+  animation: roll 2s linear infinite;
+  transform-origin: 50%;
+}
+@keyframes roll {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 /* Note: an asteroid image is included in this repo.
 Feel free to use it if you like. */
 
